src-ken&y/objects/Labor_Tracking__c.object
<CustomObject>
    <customHelpPage>HelpWorkOrder</customHelpPage>
    <description>Copy of the work order assembly&apos;s routing used to specify and track the labor required to make this assembly.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <description>Actual hours for this operation</description>
        <inlineHelpText>Actual hours for this operation</inlineHelpText>
        <label>Actual Hours</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assemblies_Completed__c</fullName>
        <description>Assemblies completed at this operation</description>
        <inlineHelpText>Assemblies completed at this operation</inlineHelpText>
        <label>Assemblies Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assemblies_to_MRB__c</fullName>
        <description>Assembly quantity to MRB (Material Review Board)</description>
        <inlineHelpText>Assembly quantity to MRB (Material Review Board)</inlineHelpText>
        <label>Assemblies to MRB</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Backflush_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked time is backflushed</description>
        <inlineHelpText>If checked time is backflushed</inlineHelpText>
        <label>Backflush Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company this Labor Tracking record belongs to</description>
        <inlineHelpText>Company this labor tracking record belongs to</inlineHelpText>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Labor Trackings</relationshipLabel>
        <relationshipName>Labor_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <description>Input only field</description>
        <label>Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date for this Labor Tracking</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Facility</description>
        <inlineHelpText>Lookup to Facility</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Labor Trackings</relationshipLabel>
        <relationshipName>Labor_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked hours at this operation sequence, if backflushed, are not quantity dependent.</description>
        <inlineHelpText>If checked hours at this operation sequence, if backflushed, are not quantity dependent.</inlineHelpText>
        <label>Fixed Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Input only field</description>
        <label>Hours</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Tracking_Unique__c</fullName>
        <label>Labor Tracking Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRB__c</fullName>
        <description>Input only field</description>
        <label>MRB</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes about this sequence</description>
        <inlineHelpText>Notes about this sequence</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Sequence__c</fullName>
        <description>Operations sequence</description>
        <inlineHelpText>Operations sequence</inlineHelpText>
        <label>Operation Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation associated with this routing operation</description>
        <inlineHelpText>Operation code associated with this routing operation</inlineHelpText>
        <label>Operation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF(
   Actual_End_Date__c != null,
   1,
   IF(
      OR(
         NULLVALUE(Standard_Hours__c,0) = 0,
         NULLVALUE(Actual_Hours__c,0) = 0
      ),
      0,
      IF(
         Fixed_Hours__c,
         Actual_Hours__c / Standard_Hours__c,
         Actual_Hours__c / (Standard_Hours__c * Work_Order__r.Order_Quantity__c)
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resource_Quantity__c</fullName>
        <description>Quantity of Resource needed at this operation</description>
        <inlineHelpText>Quantity of Resource needed at this operation</inlineHelpText>
        <label>Resource Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Sequence__c</fullName>
        <description>Resource&apos;s sequence in this operation</description>
        <inlineHelpText>Resource&apos;s sequence in this operation</inlineHelpText>
        <label>Resource Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this resource is scheduled</description>
        <inlineHelpText>Checked if this resource is scheduled</inlineHelpText>
        <label>Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Hours__c</fullName>
        <description>Standard hours at for this resource</description>
        <inlineHelpText>Standard hours at for this resource</inlineHelpText>
        <label>Standard Hours</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date for this Labor Tracking</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Center_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Work Center Resource</description>
        <inlineHelpText>Lookup to Work Center Resource</inlineHelpText>
        <label>Work Center Resource</label>
        <referenceTo>Work_Center_Resource__c</referenceTo>
        <relationshipLabel>Labor Trackings</relationshipLabel>
        <relationshipName>Labor_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work center this operation is performed at.</description>
        <inlineHelpText>Work center this operation is performed at</inlineHelpText>
        <label>Work Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Work_Center__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Work_Center__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Work_Center__c</referenceTo>
        <relationshipLabel>Labor Trackings</relationshipLabel>
        <relationshipName>Labor_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Sequence__c</fullName>
        <description>Hidden field for uniqueness of Work Order + Sequence</description>
        <inlineHelpText>Hidden field for uniqueness of Work Order + Sequence</inlineHelpText>
        <label>Work Order + Sequence</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <description>Work Order for these labor tracking records</description>
        <inlineHelpText>Work order for this labor tracking record</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Labor Trackings</relationshipLabel>
        <relationshipName>Labor_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DEPRECATED</label>
    <nameField>
        <label>Labor Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>